test/spec_vectors/func/fail/module_16.wat
(module (func $g (type 4)))